--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
 }
 body{
-    background-color: blueviolet;
+    background-color: rgb(43, 106, 111);
     text-align: center;
+    color: white;
 }
